// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolMessage Component renders with complex nested content 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div>
      <h3>
        Title
      </h3>
      <p>
        Description
      </p>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ToolMessage Component renders with custom className 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono custom-class"
  >
    <div>
      Tool content with custom class
    </div>
  </div>
</div>
`;

exports[`ToolMessage Component renders with default styling 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div>
      Tool content
    </div>
  </div>
</div>
`;

exports[`ToolMessage Component renders with multiple children 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <span>
      First child
    </span>
    <span>
      Second child
    </span>
  </div>
</div>
`;

exports[`ToolMessage Component renders with text content 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    Simple text content
  </div>
</div>
`;
